replaced age with email

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <input name="first" placeholder="First name" type="text" required />
   <input name="last" placeholder="Last name" type="text" required />
   <input
-    name="age"
-    placeholder="Age"
-    type="number"
+    name="email"
+    placeholder="email"
+    type="email"
     min="0"
     max="130"
     required
